  pre-sample values for the detrending regression
- Fix bug: crash in GUI when estimation of a restricted VECM
  was not successfully completed
- Fix for OS X: we now support Ctrl-click as equivalent to
  right-click (for popup menus, etc.)
- Fix for finding user's customized LaTeX preamble file
- Fix: more rigorous detection of whether TeX output is PDF
  rather than DVI
- Traditional Chinese locale: encode text to CP950 for EMF
  files via gnuplot
- Drag-and-drop onto gretl main window: support database files
  (gretl native, RATS or PcGive) as well as regular data files
- Graphs in GUI: for plots that don't support the full graph
  editor, add a font selector
- Build: require libgmp (no longer an optional extra)
- Internals: modify GUI sources to ensure that gretl will build
  OK with the forthcoming GTK+ 3.0
- MS Windows: update Inno installer and add the officially
  recognized translations

2010-06-24 version 1.9.1
- New command: "makepkg", for command-line creation of gretl
  function packages (.gfn files)
- pdf, cdf and pvalue functions: add support for the
  Generalized Error distribution
- "dataset" command: add new sub-command, "renumber", for
  moving a series to a new position
- wls: amend the criterion for complaining that the weights
  are all zero
- logit/probit: correct ordering of estimates when the
  constant is not first in the supplied list of regressors
- Reading gdt data files: don't stop if a denormalized tiny
  value is found: accept what the C library gives and ignore
  errno
- Reinstate --basque start-up option for GUI program
- Fix for printing of month names on time-series plots in
  locales with multi-byte characters
- OS X: use the native Mac calculator app for gretl's
  calculator toolbar item by default
- GUI: add mechanism for defining named lists, and for
  setting the main window selection from a chosen list
- GUI: "Edit attributes" (of series) dialog: add option
  to change the position of a series in the dataset